--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-# pyproject.toml (corrected)
 [project]
 name = "verda-cloud-provider"
 version = "0.0.1"
@@ -22,8 +21,9 @@ requires = ["setuptools>=68.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["."]
-include = ["verda_cloud_provider*"]
+where = ["src"]
+include = ["verda_cloud_provider*", "clusterautoscaler", "k8s"]
+namespaces = true
 
 [tool.ruff]
 line-length = 88
@@ -33,6 +33,9 @@ exclude = [
     "dist",
     ".venv",
     "__pycache__",
+    "thrid_party",
+    "src/clusterautoscaler",
+    "src/k8s"
 ]
 
 [tool.ruff.lint]
