--- a/manifests/autoscaler/cluster-autoscaler-cm.yaml
+++ b/manifests/autoscaler/cluster-autoscaler-cm.yaml
@@ -6,7 +6,4 @@ metadata:
   namespace: kube-system
 data:
   cloud-config: |-
-    address: "ca-external-grpc-cloud-provider-service:8086"
-    key: "/etc/ssl/client-cert/tls.key"
-    cert: "/etc/ssl/client-cert/tls.crt"
-    cacert: "/etc/ssl/client-cert/ca.crt"
+    address: "host.minikube.internal:8086"
